--- a/Company/Views/Employee/Edit.cshtml
+++ b/Company/Views/Employee/Edit.cshtml
@@ -6,10 +6,22 @@
 <h1>Edit</h1>
 
 <form method="post" action="/Employee/SaveEdit/@Model.Id">
+    @* @Html.AntiForgeryToken() *@
     @* <input name="Id" value="@Model.Id" type="hidden" /> *@
     <div>
-        <label>Employee Name</label>
-        <input class="form form-control" type="text" id="Name" name="Name" value="@Model.Name" />
+        @* <label>Employee Name</label> *@
+        <!--Pure HTML-->
+        @* <input class="form form-control" type="text" id="Name" name="Name" value="@Model.Name" /> *@
+        <!--Pure C# "HTML Helpers"-->
+        @* @Html.TextBox("Name") *@
+      @*   @Html.LabelFor(e=>e.Name)
+        @* @Html.TextBoxFor(e => e.Name, new { style = "color:red",@class="form form-control"}) *@
+        @*@Html.EditorFor(e=>e.Name) *@
+
+        <label asp-for="Name"></label>
+       
+        <input class="form form-control" asp-for="Name" />
+
     </div>
     <div>
         <label>Email</label>
@@ -41,3 +53,18 @@
     </div>
     <input type="submit" value="Save" class="btn btn-primary" />
 </form>
+
+
+
+<a href="/employee/index">Back To List</a><br />
+<a href="/employee/Details/@Model.Id?name=Ahmed">Go To Details</a>
+<hr />
+@Html.ActionLink("-- Back To List --","Index","Employee")<br />
+@Html.ActionLink("-- Go to Details --","Details","Employee",new {id=Model.Id,name=Model.Name,age=12})
+<hr />
+<a asp-action="Index" asp-controller="Employee">-- Go To Index --</a>
+<a asp-action="Details" asp-controller="Employee" asp-route-id="@Model.Id" asp-route-name="@Model.Name">-- Go to Details --</a>
+
+
+
+
