--- a/Company/Views/Employee/Details.cshtml
+++ b/Company/Views/Employee/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Employee
 @{
-    ViewData["Title"] = "Details";//set not get  ?????
+    ViewData["Title"] = "Details";//set ==>Layout change Title ?????
 }
 
 <h1>Details</h1>
