--- a/Company/Views/Employee/New.cshtml
+++ b/Company/Views/Employee/New.cshtml
@@ -14,29 +14,46 @@
 <br />
 <form method="post" asp-action="SaveNew" asp-controller="Employee"><!-- asp-route-id="Model.Id">-->
     @* <input type="hidden" asp-for="Id" /> *@
+    <div asp-validation-summary="All" class="text-danger"></div>
     <div>
         <label asp-for="Name"></label>
         <input class="form form-control" asp-for="Name"/>
+        <span asp-validation-for="Name" class="text-danger"></span>
     </div>
     <div>
         <label asp-for="Salary"></label>
         <input class="form form-control" asp-for="Salary" />
+        <span asp-validation-for="Salary" class="text-danger"></span>
+
     </div>
     <div>
         <label asp-for="ImageUrl"></label>
         <input class="form form-control" asp-for="ImageUrl" />
+        <span asp-validation-for="ImageUrl" class="text-danger"></span>
+
     </div>
     <div>
         <label asp-for="Email"></label>
         <input class="form form-control" asp-for="Email" />
+        <span asp-validation-for="Email" class="text-danger"></span>
+
     </div>
     <div>
         <label asp-for="DepartmentId"></label>
-        <select class="form form-control" asp-for="DepartmentId" asp-items="DeptOption">
+        <select class="form form-control" asp-for="DepartmentId" asp-items="DeptOption" required>
           <option value="0">--- Select Department ---</option>  
         </select>
+        <span asp-validation-for="DepartmentId" class="text-danger"></span>
+
     </div>
     <input type="submit" value="Create" class="btn btn-primary" />
 </form>
 
 <a asp-action="Index" asp-controller="Empoyee"> Bakc to List</a>
+
+
+
+<!--Active Client Side Validation-->
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
